# spytrap-adb

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.sh
.github/workflows/: docker-image.yml  rust.yml
src/: accessibility.rs  args.rs  dumpsys.rs  http.rs  ioc.rs  iocs.rs  lib.rs  main.rs  package.rs  pm.rs  remote_clock.rs  rules.rs  scan.rs  settings.rs  tui.rs  utils.rs
src/parsers/: accessibility.rs  mod.rs  package.rs  settings.rs
test_data/: dumpsys-accessibility-spylive360.txt
test_data/dumpsys/accessibility/: plain.txt  plain2.txt
test_data/dumpsys/package/: contacts.txt  fdroid.txt  gpstest.txt  jitsi.txt  spylive360.txt
