[package]
name = "spytrap-adb"
version = "0.1.0"
authors = ["user"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
crossterm = { version = "0.26.1", features = ["event-stream"] }
env_logger = "0.10"
forensic-adb = "0.6.1"
log = "0.4.14"
ratatui = "0.20.1"
regex = "1.5.4"
serde = { version = "1.0.130", features = ["derive"] }
serde_yaml = "0.9"
shell-escape = "0.1.5"
stalkerware-indicators = "0.2"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.12"

[dev-dependencies]
maplit = "1.0.2"
