[package]
name = "spytrap-adb"
version = "0.1.0"
authors = ["user"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.44"
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4.2.1"
crossterm = { version = "0.26.1", features = ["event-stream"] }
dirs = "5.0.0"
env_logger = "0.10"
forensic-adb = "0.6.2"
hex = "0.4.3"
indexmap = "1.9.3"
log = "0.4.14"
ratatui = "0.20.1"
regex = "1.5.4"
reqwest = { version = "0.11.16", default-features = false, features = ["rustls-tls-native-roots", "brotli", "gzip", "deflate", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.95"
serde_yaml = "0.9"
sha2 = "0.10.6"
shell-escape = "0.1.5"
stalkerware-indicators = "0.2"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "process"] }
tokio-stream = "0.1.12"

[dev-dependencies]
maplit = "1.0.2"
