[package]
name = "spytrap-adb"
version = "0.3.1"
description = "Test a phone for stalkerware using adb and usb debugging to scan for suspicious apps and configuration"
authors = ["kpcyrd <git@rxv.cc>"]
license = "GPL-3.0-or-later"
repository = "https://github.com/spytrap-org/spytrap-adb"
categories = ["command-line-utilities"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.deb]
section = "utils"
priority = "optional"
depends = "$auto, adb"

[dependencies]
anyhow = "1.0.44"
bstr = "1.9.1"
chrono = { version = "0.4.19", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4.2.1"
crossterm = { version = "0.27", features = ["event-stream"] }
dirs = "5.0.0"
env_logger = "0.11"
forensic-adb = "0.7"
hex = "0.4.3"
indexmap = { version = "2", features = ["serde"] }
log = "0.4.14"
ratatui = "0.26"
regex = "1.5.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls-native-roots", "brotli", "gzip", "deflate", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.95"
serde_yaml = "0.9"
sha2 = "0.10.6"
shell-escape = "0.1.5"
stalkerware-indicators = "0.2"
tokio = { version = "1.26.0", features = ["macros", "rt-multi-thread", "process"] }
tokio-stream = "0.1.12"

[dev-dependencies]
maplit = "1.0.2"
